<resources>
    <string name="app_name">FoodOrder</string>
    <string name="food_order" color="Black">Food Order</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_sign_up">Do you want to register?</string>
    <string name="login_password">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="register_name">Name</string>
    <string name="surname_register">Surname</string>
    <string name="email_register">Email</string>
    <string name="register_password">Password</string>
    <string name="address_register">Address</string>
    <string name="city_register">City</string>
    <string name="phone_register">Phone</string>
    <string name="submit_register">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
